<resources>
    <string name="app_name">AgroSpreadDraft</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="dashboard">Dashboard</string>
    <string name="todo_bank">TODO</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="empty_username_error">Username or Email cannot be empty</string>
    <string name="empty_password_error">Password cannot be empty</string>
    <string name="user_not_found_error">User not found</string>
    <string name="fetch_user_error">Error fetching user: %1$s</string>
    <string name="authentication_failed">Authentication failed.</string>
    <string name="register_success">User registered successfully!</string>
    <string name="register_error">Error registering user: %1$s</string>
    <string name="username_empty_error">Username cannot be empty</string>
    <string name="fullname_empty_error">Full Name cannot be empty</string>
    <string name="email_empty_error">Email cannot be empty</string>
    <string name="password_empty_error">Password cannot be empty</string>
    <string name="address_empty_error">Address cannot be empty</string>
    <string name="phone_empty_error">Phone Number cannot be empty</string>
    <string name="choose_image">Choose Image to Upload</string>
    <string name="select_image_to_upload">Please Select Image to Upload</string>
    <string name="upload_image">Uploading Image...</string>
    <string name="upload_processing">Processing...</string>
    <string name="upload_success">File Uploaded Successfully</string>
    <string name="upload_failure">File Upload Failed</string>
    <string name="item_added_to_cart">Item added to cart</string>
    <string name="item_already_in_cart">Item is already in the cart</string>
    <string name="item_added_to_favorites">Item added to favorites</string>
    <string name="item_already_in_favorites">Item is already in the favorites</string>
    <string name="product_name_fertilizer_1">Miracle Go All Purpose Plant Food</string>
    <string name="product_name_fertilizer_2">Plantmate Organic Fertilizer</string>
    <string name="product_name_fertilizer_3">Safer Lawn RESTORE</string>
    <string name="product_name_fertilizer_4">Expert Gardener Organics</string>
    <string name="product_name_pesticide_1">Safer BIONEEM</string>
    <string name="product_name_pesticide_2">Spectracide TRIAZICIDE Insect Killer</string>
    <string name="product_name_pesticide_3">Garden Safe Fungicide 3</string>
    <string name="product_name_pesticide_4">Blue Magic Pesticide</string>
    <string name="product_name_seed_1">Giants Sunflower Seed ORIGINAL</string>
    <string name="product_name_seed_2">Organic CHIA Seed</string>
    <string name="product_name_seed_3">Nutiva CHIA Seed</string>
    <string name="product_name_seed_4">Roasted and Salted Sunflower Seeds</string>
    <string name="product_name_tool_1">Shovel for precision farming</string>
    <string name="product_name_tool_2">BUY 1 TAKE 1 rake</string>
    <string name="product_name_tool_3">Wooden Handle Sickle</string>
    <string name="product_name_tool_4">Wooden Handle Weeding Hoe Black</string>
    <string name="price_fertilizer_1">Price: 3647</string>
    <string name="price_fertilizer_2">Price: 980</string>
    <string name="price_fertilizer_3">Price: 550</string>
    <string name="price_fertilizer_4">Price: 567</string>
    <string name="price_pesticide_1">Price: 987</string>
    <string name="price_pesticide_2">Price: 809</string>
    <string name="price_pesticide_3">Price: 1508</string>
    <string name="price_pesticide_4">Price: 1568</string>
    <string name="price_seed_1">Price: 1000</string>
    <string name="price_seed_2">Price: 1245</string>
    <string name="price_seed_3">Price: 789</string>
    <string name="price_seed_4">Price: 998</string>
    <string name="price_tool_1">Price: 255</string>
    <string name="price_tool_2">Price: 699</string>
    <string name="price_tool_3">Price: 380</string>
    <string name="price_tool_4">Price: 2556</string>
    <string name="cart_empty_message">Cart is empty</string>
    <string name="removed_from_cart"> removed from cart</string>
    <string name="undo">UNDO</string>
    <string name="total_price_label">Total Price: $%1$d</string>
    <string name="checkout_dialog_title">Checkout</string>
    <string name="failed_to_fetch_user_data">Failed to fetch user data</string>
    <string name="checkout_success">Checkout Success</string>
    <string name="error_saving_checkout_info">Error saving checkout info: %1$s</string>
    <string name="fill_all_fields_message">Please fill in all fields</string>
    <string name="checkout_cancelled">Checkout Cancelled</string>
    <string name="price_format">₱%1$s</string>
    <string name="item_added_to_favorite">Item added to favorites</string>
    <string name="removed_from_favorites"> removed from favorites</string>
    <string name="item_removed_from_favorites">%1$s removed from favorites</string>
    <string name="product_name">Miracle Go All Purpose Plant Food</string>
    <string name="product_price">Price: 699</string>
    <string name="quantity_negative">Quantity cannot be negative</string>
    <string name="product_name_1">Miracle Go All Purpose Plant Food</string>
    <string name="product_name_2">Plantmate Organic Fertilizer</string>
    <string name="product_name_3">Safer Lawn RESTORE</string>
    <string name="product_name_4">Expert Gardener Organics</string>
    <string name="product_price_1">Price: 3647</string>
    <string name="product_price_2">Price: 980</string>
    <string name="product_price_3">Price: 550</string>
    <string name="product_price_4">Price: 567</string>
    <string name="toast_item_added_to_cart">Item added to cart</string>
    <string name="toast_item_already_in_cart">Item is already in the cart</string>
    <string name="toast_item_added_to_favorites">Item added to favorites</string>
    <string name="toast_item_already_in_favorites">Item is already in the favorites</string>
    <string name="toast_logout">Logout!</string>
    <string name="profile_update_success">Updated successfully</string>
    <string name="profile_update_failed">Update failed</string>
    <string name="image_upload_success">File Uploaded Successfully</string>
    <string name="image_upload_failed">File Upload Failed..</string>
    <string name="image_select_prompt">Please Select Image to Upload</string>
    <string name="image_upload_progress">Processing...</string>
    <string name="image_upload_title">Uploading Image...</string>
    <string name="choose_image_prompt">Choose Image to Upload</string>
    <string name="save_button">Save</string>
    <string name="cancel_button">Cancel</string>
    <string name="titleName">Name</string>
    <string name="titleUsername">Username</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="order_details_name">Name: %1$s</string>
    <string name="order_details_address">Address: %1$s</string>
    <string name="order_details_payment_method">Payment Method: %1$s</string>
    <string name="order_details_phone_number">Phone Number: %1$s</string>
    <string name="order_details_shipping">Shipping Fee: %1$d</string>
    <string name="order_details_total_price">Total Price: %1$d</string>
    <string name="bolo_description">Use: A bolo is a large cutting tool similar to a machete, commonly used for clearing vegetation, chopping weeds, and harvesting crops like sugar cane.\nEstimated Price: \$5 - \$20\nPrice in PHP: ₱275 - ₱1,100</string>
    <string name="watering_can_description">Use: A watering can is a portable container, usually with a spout, used to water plants manually.\nEstimated Price: \$10 - \$30\nPrice in PHP: ₱550 - ₱1,650</string>
    <string name="cultivator_description">Use: A cultivator is a tool used to prepare the soil by stirring and pulverizing it, either before planting or after the crop has begun growing.\nEstimated Price:\nHandheld: \$20 - \$50\nMotorized: \$300 - \$800\nPrice in PHP:\nHandheld: ₱1,100 - ₱2,750\nMotorized: ₱16,500 - ₱44,000</string>
    <string name="slasher_description">Use: A slasher is a tool used for cutting down long grass, weeds, and other vegetation.\nEstimated Price: \$10 - \$40\nPrice in PHP: ₱550 - ₱2,200</string>
    <string name="wheelbarrow_description">Use: A wheelbarrow is a single-wheeled cart used for carrying materials such as soil, compost, or harvested crops around the farm.\nEstimated Price: \$50 - \$150\nPrice in PHP: ₱2,750 - ₱8,250</string>
    <string name="harvester_description">Use: A harvester is a machine used for harvesting crops efficiently. Types include combine harvesters for grains.\nEstimated Price: \$100,000 - \$500,000\nPrice in PHP: ₱5,500,000 - ₱27,500,000</string>
    <string name="pick_mattock_description">Use: A pick mattock is a hand tool used for digging and chopping, featuring a pick on one side and a mattock blade on the other.\nEstimated Price: \$20 - \$40\nPrice in PHP: ₱1,100 - ₱2,200</string>
    <string name="mowers_description">Use: Mowers are used to cut grass or plants. Types include lawn mowers for small areas and larger mowers for fields.\nEstimated Price:\nLawn Mower: \$100 - \$500\nField Mower: \$2,000 - \$10,000\nPrice in PHP:\nLawn Mower: ₱5,500 - ₱27,500\nField Mower: ₱110,000 - ₱550,000</string>
    <string name="todo">TODO</string>
    <string name="write_a_feedback">Write a Feedback</string>
    <string name="rate_our_app">Rate Our App</string>
    <string name="how_was_your_experience_with_us">How was your experience with us?</string>
    <string name="feedback_suggestions">Feedback/Suggestions</string>
    <string name="submit">Submit</string>
    <string name="share_to">Share to</string>
    <string name="facebook">Facebook</string>
    <string name="facebook_text">Facebook</string>
    <string name="sms">SMS</string>
    <string name="sms_text">SMS</string>
    <string name="email_ic">Email</string>
    <string name="email_text">Email</string>
    <string name="about_us">About Us</string>
    <string name="app_about">   Welcome to AgroSpread, your trusted partner in smart and sustainable farming. We are more than just a mobile application; we are a comprehensive platform that bridges the gap between farmers and suppliers. Our commitment extends beyond providing intelligent fertilizer management solutions. We also offer an integrated e-commerce platform that revolutionizes the way farmers procure their agricultural needs. This feature enables farmers to connect directly with a wide array of suppliers, ensuring access to high-quality agricultural products at competitive prices. By streamlining the procurement process, we aim to save farmers\' time, reduce costs, and enhance productivity. At AgroSpread, we believe in harnessing the power of technology to create a more efficient and sustainable agricultural industry. Join us as we work towards transforming agriculture one farm at a time.</string>
    <string name="permissions">Permissions</string>
    <string name="agree">I agree to the permissions required by this app.</string>
    <string name="ok">OK</string>
    <string name="help_center_fragment">Help Center</string>
    <string name="how_can_we_help_you_today">How can we help you today?</string>
    <string name="faq">FAQ\'s</string>
    <string name="contact_support">Contact Support</string>
    <string name="report_a_problem">Report a Problem</string>
    <string name="social_media_accounts">Social Media Accounts</string>
    <string name="link">+ LINK</string>
    <string name="google">Google</string>
    <string name="link_2">+ LINK</string>
    <string name="my_shop">My Shop</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="click">Click to reactive button to start selling.</string>
    <string name="reactivate_now">Reactivate Now</string>
</resources>