<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"
    android:layout_marginTop="10dp"
    android:padding="16dp"
    android:background="@color/white"
    android:orientation="vertical">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share_to"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_centerHorizontal="true"
            android:textSize="18sp"
            android:padding="14dp"/>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/facebook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/image_facebook"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="10dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/share_fb"
            android:contentDescription="@string/facebook" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/facebook_text"
            android:textSize="20sp"
            android:layout_gravity="center_vertical"
            android:textColor="@color/black"
            android:paddingStart="20dp"
            android:paddingEnd="10dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/sms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/image_sms"
            android:layout_width="30dp"
            android:layout_marginTop="20dp"
            android:layout_height="30dp"
            android:layout_marginStart="10dp"
            android:src="@drawable/share_sms"
            android:contentDescription="@string/sms" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sms_text"
            android:textSize="20sp"

            android:layout_marginTop="20dp"
            android:textColor="@color/black"
            android:paddingStart="20dp"
            android:paddingEnd="10dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/image_email"
            android:layout_width="30dp"
            android:layout_marginTop="20dp"
            android:layout_height="30dp"
            android:layout_marginStart ="10dp"
            android:src="@drawable/share_email"
            android:contentDescription="@string/email_ic" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email_text"
            android:textColor="@color/black"
            android:layout_marginTop="20dp"
            android:textSize="20sp"
            android:paddingStart="20dp"
            android:paddingEnd="10dp"/>

    </LinearLayout>

</LinearLayout>
