<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_us"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_centerHorizontal="true"
                android:textSize="24sp"
                android:padding="14dp"/>
        </RelativeLayout>

        <TextView
            android:id="@+id/about_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="italic"
            android:layout_marginTop="10dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/app_about"
            android:layout_marginBottom="16dp"
            android:justificationMode="inter_word"
            tools:ignore="UnusedAttribute,VisualLintLongText" />

        <TextView
            android:id="@+id/permission_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/permissions"
            android:layout_marginTop="20dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:textColor="@color/black"
            android:layout_marginBottom="8dp" />

        <CheckBox
            android:id="@+id/permission_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:minHeight="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/agree"
            android:textSize="16sp"
            tools:ignore="VisualLintButtonSize" />

        <Button
            android:id="@+id/ok_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ok"
            android:layout_marginTop="20dp"
            android:layout_marginStart="130dp"
            android:layout_marginEnd="130dp"
            android:textColor="@color/white"
            android:background="@drawable/login_button_selector"
            android:backgroundTint="#008080"
            android:enabled="false"
            tools:ignore="VisualLintButtonSize" />
    </LinearLayout>
</ScrollView>