<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        >

        <Button
            android:id="@+id/backButton"
            style="@style/TransparentButton"
            android:layout_width="50dp"
            android:layout_height="62dp"
            android:drawableStart="@drawable/baseline_arrow_back_24"
            android:padding="14dp"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/socialTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_shop"
            android:padding="14dp"
            android:layout_toEndOf="@+id/backButton"
            android:textColor="@color/black"
            android:textSize="25sp"
            />
    </RelativeLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="276dp"
        android:layout_marginStart="90dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="90dp"
        android:src="@drawable/start_selling"
        tools:ignore="ContentDescription,ImageContrastCheck" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_back"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/click"
        android:textAlignment="center"
        android:textSize="16sp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"/>

    <Button
        android:id="@+id/reactivateSelling"
        android:layout_width="wrap_content"
        android:textAllCaps="false"
        android:text="@string/reactivate_now"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:padding="14dp"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:background="#008080"
        android:layout_height="wrap_content"/>

</LinearLayout>