<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/bg"
   >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/write_a_feedback"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_centerHorizontal="true"
            android:textSize="18sp"
            android:padding="14dp"/>
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16sp">

            <ImageView
                android:id="@+id/iv_app_icon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/logo_app_black_ver"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rate_our_app"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:textColor="@color/black"
                android:layout_marginTop="50dp"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/experience_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_gravity="center"
                android:textColor="#0047AB"
                android:textStyle="bold"
                android:textSize="16sp"
                android:text="@string/how_was_your_experience_with_us" />

            <RatingBar
                android:id="@+id/rb_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:numStars="5"
                android:stepSize="1.0"
                android:layout_gravity="center"
                android:layout_marginTop="10dp" />


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="10dp"
                android:layout_marginTop="100dp">

                <EditText
                    android:id="@+id/et_feedback"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginEnd="10dp"
                    android:background="@color/white"
                    android:gravity="top"
                    android:hint="@string/feedback_suggestions"
                    android:inputType="textMultiLine"
                    android:lines="5"
                    android:textColorHint="#757575"
                    tools:ignore="Autofill,VisualLintTextFieldSize" />
            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/send_feedback"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="100sp"
                android:background="@drawable/login_button_shape_corner"
                android:backgroundTint="#008080"
                android:padding="20dp"
                android:text="@string/submit"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="10pt"
                tools:ignore="TextSizeCheck,VisualLintButtonSize" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
